--- a/demo/demo.css
+++ b/demo/demo.css
@@ -1,20 +1,42 @@
+#sidebar {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 300px;
+  padding: 20px; }
+
+#main {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 300px;
+  right: 15px;
+  /* to compensate for Bootstrap */
+  overflow: auto; }
+  #main .thumbnail {
+    position: relative;
+    text-align: center;
+    transition: box-shadow 0.5s; }
+    #main .thumbnail .image {
+      height: 200px;
+      background-position: 50% 50%;
+      background-size: cover; }
+    #main .thumbnail .name {
+      position: absolute;
+      display: none;
+      bottom: 5px;
+      right: 5px;
+      padding: 5px;
+      background-color: rgba(0, 0, 0, 0.5);
+      color: #fff; }
+    #main .thumbnail:hover {
+      box-shadow: 0px 0 10px #08b;
+      cursor: pointer; }
+      #main .thumbnail:hover .name {
+        display: block; }
+  #main p.biography {
+    white-space: pre-wrap; }
+
 a {
-  cursor: pointer;
-}
-
-.thumbnail {
-  text-align: center;
-}
-
-.thumbnail .image {
-  height: 200px;
-  background-position: 50% 50%;
-  background-size: cover;
-}
-
-.thumbnail p.biography {
-  position: relative;
-  max-height: 100px;
-  overflow: auto;
-  text-align: left;
-}
+  cursor: pointer; }
